tekton/app-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  labels:
    app.kubernetes.io/instance: java-app
    app.kubernetes.io/name: java-app
spec:
  selector:
    matchLabels:
      app: java-app
  replicas: 1
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: >-
            image-registry.openshift-image-registry.svc:5000/java-pipeline/java-app:latest
          ports:
            - containerPort: 8080
