tekton/app-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  labels:
    app: java-app
    app.kubernetes.io/component: java-app
    app.kubernetes.io/instance: java-app
    app.kubernetes.io/name: java-app
    app.kubernetes.io/part-of: java-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  selector:
    app: java-app
    deploymentconfig: java-app
